--- a/boutique/medium/1/last-of-the-big-tuskers/index.html
+++ b/boutique/medium/1/last-of-the-big-tuskers/index.html
@@ -219,7 +219,7 @@
 
   <footer class="single">
     <div class="quote">
-      <p class="small"><sup>1</sup> <font class="en">Dimension listed in a pixel value (px) is the full resolution of the digital edition. All dimensions listed in &lsquo;All included dimensions&rsquo; are made available for download upon receipt of purchase. <a href="../../../../c/terms-of-purchase/" target="_blank" title="Animat Habitat terms of purchase.">Terms of Purchase</a>.</font><font class="fr">La dimension indiquée dans une valeur de pixel (&nbsp;px&nbsp;) correspond à la pleine résolution de l'édition numérique. Toutes les dimensions répertoriées dans &laquo;&nbsp;Toutes les dimensions incluses&nbsp;&raquo; sont mises à disposition pour téléchargement dès réception de l'achat. <a href="../../../../c/terms-of-purchase/" target="_blank" title="Animat Habitat conditions d'achat.">Conditions d'achat</a>.</font></p>
+      <p class="small"><sup>1</sup>&nbsp; <font class="en">Dimension listed in a pixel value (px) is the full resolution of the digital edition. All dimensions listed in &lsquo;All included dimensions&rsquo; are made available for download upon receipt of purchase. <a href="../../../../c/terms-of-purchase/" target="_blank" title="Animat Habitat terms of purchase.">Terms of Purchase</a>.</font><font class="fr">La dimension indiquée dans une valeur de pixel (&nbsp;px&nbsp;) correspond à la pleine résolution de l'édition numérique. Toutes les dimensions répertoriées dans &laquo;&nbsp;Toutes les dimensions incluses&nbsp;&raquo; sont mises à disposition pour téléchargement dès réception de l'achat. <a href="../../../../c/terms-of-purchase/" target="_blank" title="Animat Habitat conditions d'achat.">Conditions d'achat</a>.</font></p>
 
     </div>
 
