--- a/boutique/medium/giclee/index.html
+++ b/boutique/medium/giclee/index.html
@@ -141,7 +141,7 @@
 
   <footer class="single">
     <div class="quote">
-      <!-- <p class="small"><sup>1</sup> <font class="en"><i>Last of the Big Tuskers</i> (2018)&mdash;art of the film collection is a limited edition run of one hundred (100) numbered giclée prints.</font><font class="fr">La collection d'art du film est une série en édition limitée d'une centaine de tirages giclées.</font></p> -->
+      <!-- <p class="small"><sup>1</sup>&nbsp; <font class="en"><i>Last of the Big Tuskers</i> (2018)&mdash;art of the film collection is a limited edition run of one hundred (100) numbered giclée prints.</font><font class="fr">La collection d'art du film est une série en édition limitée d'une centaine de tirages giclées.</font></p> -->
 
       <!-- Fine art print, printed on acid-free archival paper with unprinted / white borders around the edge for safe handling and to allow for framing options after delivery to you. -->
 
