--- a/c/privacy-policy/index.html
+++ b/c/privacy-policy/index.html
@@ -83,7 +83,7 @@
 
   <footer>
     <div class="quote" id="footnotes">
-      <p class="small"><sup>1</sup> You may not use a false e-mail address, impersonate any person or entity. Registers are secured in a third-party service, and in compliance with its policies:</p>
+      <p class="small"><sup>1</sup>&nbsp; You may not use a false e-mail address, impersonate any person or entity. Registers are secured in a third-party service, and in compliance with its policies:</p>
       <div>
         <p class="small">Art and story&hellip; And elephants. (<a href="../../url/c/campaignmonitor-policies/" rel="noopener" target="_blank" title="Campaign Monitor / Policies">Campaign Monitor</a>)</p>
         <!--p class="small">Last of the Big Tuskers. ()</p-->
