--- a/c/terms-of-purchase/index.html
+++ b/c/terms-of-purchase/index.html
@@ -155,8 +155,8 @@
   <footer>
     <div class="quote" id="footnotes">
       <p class="small">Animat Boutique is continuously updated with project artworks and prints.</p>
-      <p class="linebreak small"><sup>1</sup> Animat Boutique try and ensure that all details, descriptions and prices at Animat Boutique are accurate, however, errors may occur. If an error is discovered in the representation of an Order, Animat Boutique will inform Purchaser of this as soon as possible and give Purchaser the option of reconfirming the Order with the correct information or cancelling it. If Animat Boutique is unable to contact Purchaser, Animat Boutique will manage the Order as cancelled.</p>
-      <p class="small"><sup>2</sup> All items purchased from Animat Boutique are made pursuant to a shipment contract: the risk of loss pass to Purchaser upon delivery to the carrier.</p>
+      <p class="linebreak small"><sup>1</sup>&nbsp; Animat Boutique try and ensure that all details, descriptions and prices at Animat Boutique are accurate, however, errors may occur. If an error is discovered in the representation of an Order, Animat Boutique will inform Purchaser of this as soon as possible and give Purchaser the option of reconfirming the Order with the correct information or cancelling it. If Animat Boutique is unable to contact Purchaser, Animat Boutique will manage the Order as cancelled.</p>
+      <p class="small"><sup>2</sup>&nbsp; All items purchased from Animat Boutique are made pursuant to a shipment contract: the risk of loss pass to Purchaser upon delivery to the carrier.</p>
 
     </div>
 
