--- a/c/terms-of-use/index.html
+++ b/c/terms-of-use/index.html
@@ -92,8 +92,8 @@
 
   <footer>
     <div class="quote" id="footnotes">
-      <p class="small"><sup>1</sup> See the PayPal <a href="../../url/c/paypal-user-agreement/" rel="noopener" target="_blank" title="PayPal User Agreement">Privacy Policy</a> for more details.</p>
-      <p class="small"><sup>2</sup> You can request to receive an exported document of all account information about You stored on Animat Boutique. You can also request that the account office at Animat Webitat erase all account information about You stored on Animat Boutique, however, this does not include any Animat Habitat account information that is obliged to remain documented for administrative, legal, or security purposes.</p>
+      <p class="small"><sup>1</sup>&nbsp; See the PayPal <a href="../../url/c/paypal-user-agreement/" rel="noopener" target="_blank" title="PayPal User Agreement">Privacy Policy</a> for more details.</p>
+      <p class="small"><sup>2</sup>&nbsp; You can request to receive an exported document of all account information about You stored on Animat Boutique. You can also request that the account office at Animat Webitat erase all account information about You stored on Animat Boutique, however, this does not include any Animat Habitat account information that is obliged to remain documented for administrative, legal, or security purposes.</p>
 
     </div>
 
