--- a/conservation/africa/index.html
+++ b/conservation/africa/index.html
@@ -93,7 +93,7 @@
 
         <p class="linebreak">The wildlife tourism industry in Africa is big business, but all business is dependent on its clientele. Individual actions can make a collective difference, indicating that travelers will only support ethical, sustainable wildlife tourism. When sustainable use of the wild places and ethical treatment of the animals that live in them is made a priority by a big collective of individual tourists, the wildlife tourism industry will change for the better.</p>
 
-        <p class="linebreak">When going on a safari, look for companies that promote places where wildlife appears to live in an appropriate habitat with access to shelter, space, and water at all times. Look for experiences that offer observation of animals engaging in natural behaviors in natural environments. And look to visit national parks and protected areas that are managed by a reliable and ethical operator, where the money you spend will support park officials and local communities that uphold these wild places.</p>
+        <p class="linebreak">When going on a safari, look for companies that promote places where wildlife appears to live in an appropriate habitat with access to shelter, space, and water at all times. Look for experiences that offer observation of animals engaging in natural behaviors in natural environments. And look to visit national parks and protected areas that are managed by a reliable and ethical operator, where the money you spend will support park officials and local communities that steward these wild places.</p>
 
       </div>
 
@@ -374,9 +374,9 @@
 
       <p class="small">This list was updated September 2019.</p>
 
-      <p class="linebreak small"><sup>1</sup> A &ldquo;game reserve&rdquo; is a protected area where animals are seen on safari as well as are hunted for <i>sport</i>. In a game reserve, animal populations are controlled in their natural habitat. And so their ecosystems are conserved. A reserve that prohibits hunting may be considered a &ldquo;nature reserve&rdquo;.</p>
-      <p class="small"><sup>2</sup> Kavango-Zambezi Transfrontier Conservation Area (KAZA TFCA) is an agreement signed by Angola, Botswana, Namibia, Zambia and Zimbabwe, binding these countries to create a transfrontier park straddling their national borders.</p>
-      <p class="small"><sup>3</sup> The Union of Comoros and republics of Madagascar, Mauritius, Seychelles are part of SADC but the islands are unique habitats and unlisted here. The United Republic of Tanzania and republics of Malawi, Mozambique are part of SADC and are listed here in East Africa. The republics of Gabon, Congo, Uganda are part of SADC and are (to be) listed here in Central Africa.</p>
+      <p class="linebreak small"><sup>1</sup>&nbsp; A &ldquo;game reserve&rdquo; is a protected area where animals are seen on safari as well as are hunted for <i>sport</i>. In a game reserve, animal populations are controlled in their natural habitat. And so their ecosystems are conserved. A reserve that prohibits hunting may be considered a &ldquo;nature reserve&rdquo;.</p>
+      <p class="small"><sup>2</sup>&nbsp; Kavango-Zambezi Transfrontier Conservation Area (KAZA TFCA) is an agreement signed by Angola, Botswana, Namibia, Zambia and Zimbabwe, binding these countries to create a transfrontier park straddling their national borders.</p>
+      <p class="small"><sup>3</sup>&nbsp; The Union of Comoros and republics of Madagascar, Mauritius, Seychelles are part of SADC but the islands are unique habitats and unlisted here. The United Republic of Tanzania and republics of Malawi, Mozambique are part of SADC and are listed here in East Africa. The republics of Gabon, Congo, Uganda are part of SADC and are (to be) listed here in Central Africa.</p>
 
     </div>
 
