--- a/conservation/afrique/index.html
+++ b/conservation/afrique/index.html
@@ -378,9 +378,9 @@
 
       <p class="small">Cette liste a été mise à jour en septembre 2019.</p>
 
-      <p class="linebreak small"><sup>1</sup> Une &laquo;&nbsp;réserve de chasse&nbsp;&raquo; est une zone protégée où les animaux sont vus en safari ainsi que chassés pour le <i>sport</i>. Dans une réserve de chasse, les populations animales sont contrôlées dans leur habitat naturel. Et ainsi leurs écosystèmes sont conservés. Une réserve qui interdit la chasse peut être considérée comme une &laquo;&nbsp;réserve naturelle&nbsp;&raquo;&nbsp;.</p>
-      <p class="small"><sup>2</sup> Kavango-Zambezi Transfrontier Conservation Area (&nbsp;KAZA TFCA&nbsp;) s'agit d'un accord signé par l'Angola, le Botswana, la Namibie, la Zambie et le Zimbabwe, liant ces pays à la création d'un parc transfrontalier à cheval sur leurs frontières nationales.</p>
-      <p class="small"><sup>3</sup> L'Union des Comores et les républiques de Madagascar, Maurice, Seychelles font partie de SADC, mais ces îles sont des habitats uniques et non répertoriés ici. La République-Unie de Tanzanie et les républiques du Malawi et du Mozambique font partie de SADC et sont répertoriées ici en Afrique de l'Est. Les républiques du Gabon, du Congo et de l'Ouganda font partie de SADC et sont répertoriées ici en Afrique centrale.</p>
+      <p class="linebreak small"><sup>1</sup>&nbsp; Une &laquo;&nbsp;réserve de chasse&nbsp;&raquo; est une zone protégée où les animaux sont vus en safari ainsi que chassés pour le <i>sport</i>. Dans une réserve de chasse, les populations animales sont contrôlées dans leur habitat naturel. Et ainsi leurs écosystèmes sont conservés. Une réserve qui interdit la chasse peut être considérée comme une &laquo;&nbsp;réserve naturelle&nbsp;&raquo;&nbsp;.</p>
+      <p class="small"><sup>2</sup>&nbsp; Kavango-Zambezi Transfrontier Conservation Area (&nbsp;KAZA TFCA&nbsp;) s'agit d'un accord signé par l'Angola, le Botswana, la Namibie, la Zambie et le Zimbabwe, liant ces pays à la création d'un parc transfrontalier à cheval sur leurs frontières nationales.</p>
+      <p class="small"><sup>3</sup>&nbsp; L'Union des Comores et les républiques de Madagascar, Maurice, Seychelles font partie de SADC, mais ces îles sont des habitats uniques et non répertoriés ici. La République-Unie de Tanzanie et les républiques du Malawi et du Mozambique font partie de SADC et sont répertoriées ici en Afrique de l'Est. Les républiques du Gabon, du Congo et de l'Ouganda font partie de SADC et sont répertoriées ici en Afrique centrale.</p>
 
     </div>
 
