--- a/scene/one/book-of-ella/index.html
+++ b/scene/one/book-of-ella/index.html
@@ -114,7 +114,7 @@
       <div class="clear">
 
         <div class="quote" id="footnotes">
-          <p class="small"><sup>1</sup> <s>Green Printer</s>, defunct print shop.</p>
+          <p class="small"><sup>1</sup>&nbsp; <s>Green Printer</s>, defunct print shop. So it goes.</p>
 
         </div>
       </div>
