--- a/scene/two/index.html
+++ b/scene/two/index.html
@@ -33,7 +33,7 @@
     <ul class="page">
       <li class="crumb logo color"><a href="../../" title="Animat Habitat"><img alt="Animat Mark &ndash; Two &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.two.svg"/></a></li>
       <li class="crumb scene color"><a><i>White Tiger</i></a></li>
-      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en français."><font class="en">en&nbsp;&#92;&nbsp;fr</font><font class="fr">en</font></a></li>
+      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en français."><font class="en">fr</font><font class="fr">en</font></a></li>
       <li class="right thin" id="currency"><a class="title" onclick="toggle_currency();"><font class="color-reset">
         <font class="paypal-ca"><b class="overscore">CA</b>&nbsp;&#92;&nbsp;US</font>
         <font class="paypal-us">CA&nbsp;&#92;&nbsp;<b class="overscore">US</b></font>
@@ -45,9 +45,9 @@
   <header>
     <div class="quote text-center">
       <h1 class="title">Animat<font class="letterspace"> </font><font class="thin">Habitat</font></h1>
-      <h3>Scene two:<font class="fr">&nbsp;&#92;&nbsp;Scène deux&nbsp;:</font></h3>
-      <h1 class="clear title" id="scene-header"><a class="lettermark" onclick="toggle_scene();">White<font class="letterspace"> </font><font class="thin">Tiger</font></a></h1>
-      <h3><font class="color-reset">Exhibition of art to change the way we look at wildlife.<font class="fr"><br>Exposition d'art pour changer la façon dont nous regardons la nature.</font></font></h3>
+      <h3><font class="en">Scene two:</font><font class="fr">Scène deux&nbsp;:</font></h3>
+      <h1 class="clear title" id="scene-header"><a class="lettermark" onclick="toggle_scene();"><font class="en">White<font class="letterspace"> </font><font class="thin">Tiger</font></font><font class="fr"><font class="thin">Tiger</font><font class="letterspace"> </font>Blanc</font></a></h1>
+      <h3><font class="color-reset"><font class="en">Exhibition of art to change the way we look at wildlife.</font><font class="fr">Exposition d'art pour changer la façon dont nous regardons la nature.</font></font></h3>
     </div>
   </header>
 
@@ -68,60 +68,60 @@
     <section class="product single" id="scene">
 
       <div>
-        <h5 class="color"><a class="color overscore" onclick="toggle_meta();">Oil Painting</a><font class="fr">&nbsp;&#92;&nbsp;Peinture à l'huile</font></h5>
+        <h5 class="color"><a class="color overscore" onclick="toggle_meta();"><font class="en">Oil Painting</font><font class="fr">Peinture à l'huile</font></a></h5>
         <div class="clear" id="product-meta">
-          <p class="small">Painted with Gamblin artists colors on linen canvas. Created in Canada.<font class="fr">&nbsp;&#92;&nbsp;Peint avec des couleurs d'artistes Gamblin sur toile de lin. Créé au Canada.</font></p>
-          <h5 class="author">Art by<font class="fr">&nbsp;&#92;&nbsp;par</font> Dane Aleksander.</h5>
+          <p class="small"><font class="en">Painted with Gamblin artists colors on linen canvas. Created in Canada.</font><font class="fr">Peint avec des couleurs d'artistes Gamblin sur toile de lin. Créé au Canada.</font></p>
+          <h5 class="author">Art <font class="en">by</font><font class="fr">par</font> Dane Aleksander.</h5>
 
         </div>
 
-        <p class="linebreak"><i>White Tiger</i> is an oil painting of an Amur tiger in the taiga. This publication is second in a series of scenes in wildlife art at Animat Habitat. The original painting is photographed and reproduced in limited edition as an archival pigment print on acid-free archival paper, and printed with an inch unprinted matte to allow for framing options and safe handling. The archival pigment prints are available for pre-order in two sizes. A digital copy of the corrected and edited photograph is also available for pre-order.<font class="fr">&nbsp;&#92;&nbsp;<i>Tigre blanc</i> est une peinture à l'huile d’un tigre dans la ta&iuml;ga. Cette publication est la deuxième d'une série de projets chez Animat Habitat. La peinture originale est photographiée et reproduite en édition limitée en tant que tirage pigmentaire d'archives sur du papier d'archivage sans acide, et imprimée avec une mate d'un pouce non imprimée pour permettre une manipulation en toute sécurité ainsi que des options d'encadrement. Les tirages pigmentaires d'archives sont disponibles en deux tailles. Une copie numérique de la photo corrigée et éditée est également disponible.</font></p>
+        <p class="linebreak"><font class="en"><i>White Tiger</i> is an oil painting of an Amur tiger in the taiga. This publication is second in a series of scenes in wildlife art at Animat Habitat. The original painting is photographed and reproduced in limited edition as an archival pigment print on acid-free archival paper, and printed with an inch unprinted matte to allow for framing options and safe handling. The archival pigment prints are available for pre-order in two sizes. A digital copy of the corrected and edited photograph is also available for pre-order.</font><font class="fr"><i>Tigre blanc</i> est une peinture à l'huile d’un tigre dans la ta&iuml;ga. Cette publication est la deuxième d'une série de projets chez Animat Habitat. La peinture originale est photographiée et reproduite en édition limitée en tant que tirage pigmentaire d'archives sur du papier d'archivage sans acide, et imprimée avec une mate d'un pouce non imprimée pour permettre une manipulation en toute sécurité ainsi que des options d'encadrement. Les tirages pigmentaires d'archives sont disponibles en deux tailles. Une copie numérique de la photo corrigée et éditée est également disponible.</font></p>
 
-        <p class="linebreak">Exhibition Date:<font class="fr">&nbsp;&#92;&nbsp;Date d'exposition&nbsp;:</font> &ndash;</p>
+        <p class="linebreak"><font class="en">Exhibition Date:</font><font class="fr">Date d'exposition&nbsp;:</font> &ndash;</p>
 
       </div>
 
       <div class="clear diptych ptych-fixed">
 
         <div>
-          <h5><a class="overscore" onclick="toggle_0200_0011();">Oil Painting</a><font class="fr">&nbsp;&#92;&nbsp;Peinture à l'huile</font></h5>
+          <h5><a class="overscore" onclick="toggle_0200_0011();"><font class="en">Oil Painting</font><font class="fr">Peinture à l'huile</font></a></h5>
           <div class="clear small" id="product-0200-0011">
             <p><font class="sku">0200 0011</font></p>
 
           </div>
 
-          <p>Dimension: 30&nbsp;&times;&nbsp;15 in<font class="fr">&nbsp;&#92;&nbsp;po</font></p>
+          <p>Dimension: 30&nbsp;&times;&nbsp;15 <font class="en">in</font><font class="fr">po</font></p>
 
         </div>
 
         <div>
-          <h5><a class="overscore" onclick="toggle_0201_0111();">Digital Image</a><font class="fr">&nbsp;&#92;&nbsp;numérique</font></h5>
+          <h5><a class="overscore" onclick="toggle_0201_0111();"><font class="en">Digital Image</font><font class="fr">Image numérique</font></a></h5>
           <div class="clear small" id="product-0201-0111">
             <p><font class="sku">0201 0111</font></p>
 
           </div>
           <p>Dimension: 3240&nbsp;&times;&nbsp;1620 px</p>
-          <p>File Format:<font class="fr">&nbsp;&#92;&nbsp;Format de fichier&nbsp;:</font> JPG</p>
-          <p class="lineend">Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">2</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price">2</font></font></p>
+          <p><font class="en">File Format:</font><font class="fr">Format de fichier&nbsp;:</font> JPG</p>
+          <p class="lineend"><font class="en">Price:</font><font class="fr">Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">2</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price">2</font></font></p>
 
         </div>
 
         <div class="clear-bottom">
-          <h5><a class="overscore" onclick="toggle_0201_1111();">Limited Edition Giclée</a><font class="fr">&nbsp;&#92;&nbsp;en édition limitée</font></h5>
+          <h5><a class="overscore" onclick="toggle_0201_1111();"><font class="en">Limited Edition Giclée</font><font class="fr">Giclée en édition limitée</font></a></h5>
           <div class="clear" id="product-0201-1111">
             <p><font class="sku small">0201 1111</font></p>
-            <p>Edition of<font class="fr">&nbsp;&#92;&nbsp;Édition de</font> 250.</p>
+            <p><font class="en">Edition of</font><font class="fr">Édition de</font> 250.</p>
 
           </div>
-          <p>Dimension: 12&nbsp;&times;&nbsp;8 in<font class="fr">&nbsp;&#92;&nbsp;po</font></p>
+          <p>Dimension: 12&nbsp;&times;&nbsp;8 <font class="en">in</font><font class="fr">po</font></p>
           <div class="clear small">
-            <p>Matte:<font class="fr">&nbsp;&#92;&nbsp;Cache&nbsp;:</font> 1 in<font class="fr">&nbsp;&#92;&nbsp;po</font></p>
-            <p class="lineend">Print:<font class="fr">&nbsp;&#92;&nbsp;Impression&nbsp;:</font> 10&nbsp;&times;&nbsp;6 in<font class="fr">&nbsp;&#92;&nbsp;po</font></p>
+            <p><font class="en">Matte:</font><font class="fr">Cache&nbsp;:</font> 1 <font class="en">in</font><font class="fr">po</font></p>
+            <p class="lineend"><font class="en">Print:</font><font class="fr">Impression&nbsp;:</font> 10&nbsp;&times;&nbsp;6 <font class="en">in</font><font class="fr">po</font></p>
           </div>
-          <p>Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">100</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price">125</font></font></p>
+          <p><font class="en">Price:</font><font class="fr">Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">100</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price">125</font></font></p>
 
           <div class="clear paypal-ca">
-            <p class="lineend small">Shipping within Canada is included.<font class="fr">&nbsp;&#92;&nbsp;L'expédition au Canada est incluse.</font></p>
+            <p class="lineend small"><font class="en">Shipping within Canada is included.</font><font class="fr">L'expédition au Canada est incluse.</font></p>
 
           </div>
 
@@ -142,7 +142,7 @@
             </select>
 
             <input type="hidden" name="currency_code" value="CAD">
-            <button type="submit" name="submit" alt="White Tiger [12&nbsp;&times;&nbsp;8] (Giclée)">Pre-order<font class="fr">&nbsp;&#92;&nbsp;Pré-commander</font></button>
+            <button type="submit" name="submit" alt="White Tiger [12&nbsp;&times;&nbsp;8] (Giclée)"><font class="en">Pre-order</font><font class="fr">Pré-commander</font></button>
 
           </form>
 
@@ -156,27 +156,27 @@
 
           </form>
 
-          <p class="linebreak small"><font class="paypal-ca">Select the <u>International</u> option for shipping outside Canada.<font class="fr">&nbsp;&#92;&nbsp;Veuillez sélectionner l'option <u>Internationale</u> pour l'expédition à l'extérieur du Canada.</font><sup>&nbsp;[<a class="button" onclick="fn();" title="Terms of Purchase">1</a>]</sup></font></p>
+          <p class="linebreak small"><font class="paypal-ca"><font class="en">Select the <u>International</u> option for shipping outside Canada.</font><font class="fr">Veuillez sélectionner l'option <u>Internationale</u> pour l'expédition à l'extérieur du Canada.</font><sup>&nbsp;[<a class="button" onclick="fn();" title="Terms of Purchase">1</a>]</sup></font></p>
 
         </div>
 
         <div class="clear-bottom">
-          <h5><a class="overscore" onclick="toggle_0201_1121();">Limited Edition Giclée</a><font class="fr">&nbsp;&#92;&nbsp;en édition limitée</font></h5>
+          <h5><a class="overscore" onclick="toggle_0201_1121();"><font class="en">Limited Edition Giclée</font><font class="fr">Giclée en édition limitée</font></a></h5>
           <div class="clear" id="product-0201-1121">
             <p><font class="sku small">0201 1121</font></p>
-            <p>Edition of<font class="fr">&nbsp;&#92;&nbsp;Édition de</font> 25.</p>
+            <p><font class="en">Edition of</font><font class="fr">Édition de</font> 25.</p>
 
           </div>
-          <p>Dimension: 20&nbsp;&times;&nbsp;12 in<font class="fr">&nbsp;&#92;&nbsp;po</font></p>
+          <p>Dimension: 20&nbsp;&times;&nbsp;12 <font class="en">in</font><font class="fr">po</font></p>
           <div class="clear small">
-            <p>Matte:<font class="fr">&nbsp;&#92;&nbsp;Cache&nbsp;:</font> 1 in<font class="fr">&nbsp;&#92;&nbsp;po</font></p>
-            <p class="lineend">Print:<font class="fr">&nbsp;&#92;&nbsp;Impression&nbsp;:</font> 18&nbsp;&times;&nbsp;10 in<font class="fr">&nbsp;&#92;&nbsp;po</font></p>
+            <p><font class="en">Matte:</font><font class="fr">Cache&nbsp;:</font> 1 <font class="en">in</font><font class="fr">po</font></p>
+            <p class="lineend"><font class="en">Print:</font><font class="fr">Impression&nbsp;:</font> 18&nbsp;&times;&nbsp;10 <font class="en">in</font><font class="fr">po</font></p>
           </div>
 
-          <p>Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">200</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price">200</font></font></p>
+          <p><font class="en">Price:</font><font class="fr">Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">200</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price">200</font></font></p>
 
           <div class="clear paypal-ca">
-            <p class="lineend small">Shipping within Canada is included.<font class="fr">&nbsp;&#92;&nbsp;L'expédition au Canada est incluse.</font></p>
+            <p class="lineend small"><font class="en">Shipping within Canada is included.</font><font class="fr">L'expédition au Canada est incluse.</font></p>
 
           </div>
 
@@ -197,7 +197,7 @@
             </select>
 
             <input type="hidden" name="currency_code" value="CAD">
-            <button type="submit" name="submit" alt="White Tiger [20&nbsp;&times;&nbsp;12] (Giclée)">Pre-order<font class="fr">&nbsp;&#92;&nbsp;Pré-commander</font></button>
+            <button type="submit" name="submit" alt="White Tiger [20&nbsp;&times;&nbsp;12] (Giclée)"><font class="en">Pre-order</font><font class="fr">Pré-commander</font></button>
 
           </form>
 
@@ -211,14 +211,14 @@
 
           </form>
 
-          <p class="linebreak small"><font class="paypal-ca">Select the <u>International</u> option for shipping outside Canada.<font class="fr">&nbsp;&#92;&nbsp;Veuillez sélectionner l'option <u>Internationale</u> pour l'expédition à l'extérieur du Canada.</font><sup>&nbsp;[<a class="button" onclick="fn();" title="Terms of Purchase">1</a>]</sup></font></p>
+          <p class="linebreak small"><font class="paypal-ca"><font class="en">Select the <u>International</u> option for shipping outside Canada.</font><font class="fr">Veuillez sélectionner l'option <u>Internationale</u> pour l'expédition à l'extérieur du Canada.</font><sup>&nbsp;[<a class="button" onclick="fn();" title="Terms of Purchase">1</a>]</sup></font></p>
 
         </div>
 
       </div>
 
       <div class="quote" id="footnotes">
-        <p class="small"><sup>1</sup> International shipping is limited to countries listed as available for international shipping in the boutique <a href="../../c/terms-of-purchase/" target="_blank" title="Animat Habitat terms of purchase.">Terms of Purchase</a>.<font class="fr">&nbsp;&#92;&nbsp;L'expédition à l'extérieur du Canada est limitée aux pays répertoriés comme disponibles pour l'expédition international dans les conditions d'achat de la boutique.</font></p>
+        <p class="small"><sup>1</sup>&nbsp; <font class="en">International shipping is limited to countries listed as available for international shipping in the boutique <a href="../../c/terms-of-purchase/" target="_blank" title="Animat Habitat terms of purchase, conditions d'achat.">Terms of Purchase</a>.</font><font class="fr">L'expédition à l'extérieur du Canada est limitée aux pays répertoriés comme disponibles pour l'expédition international dans les <a href="../../c/terms-of-purchase/" target="_blank" title="Animat Habitat terms of purchase, conditions d'achat.">conditions d'achat</a>.</font></p>
 
       </div>
 
@@ -228,7 +228,7 @@
 
   <div class="clear">
     <div class="quote clear-bottom text-center">
-      <h2>Project Broadcast<font class="fr">&nbsp;&#92;&nbsp;Mises à jour du projet</font></h2>
+      <h2><font class="en">Project Broadcast</font><font class="fr">Mises à jour du projet</font></h2>
     </div>
 
   </div>
@@ -262,7 +262,7 @@
   <div class="clear color">
     <section class="single">
       <div class="quote text-center">
-        <h4><font class="color text-quote">&ldquo;</font><font class="thin">The fight to save tigers is our collective responsibility. Human beings are the answer to saving tigers. You and I are the answer.</font><font class="color text-quote">&rdquo;</font><font class="fr"><font class="thin">&nbsp;&#92;&nbsp;</font>&laquo;&nbsp;<font class="thin">La lutte pour sauver les tigres est notre responsabilité à tous. Les étres humains sont la réponse pour sauvegarder les tigres. Toi et moi, nous sommes tous la réponse.</font>&nbsp;&raquo;</font><br><font class="color small thin">&mdash;&nbsp;Singye Wangmo, Senior Forestry Officer at Royal Manas National Park in Bhutan, 2017</font></h4>
+        <h4><font class="en"><font class="color text-quote">&ldquo;</font><font class="thin">The fight to save tigers is our collective responsibility. Human beings are the answer to saving tigers. You and I are the answer.</font><font class="color text-quote">&rdquo;</font></font><font class="fr"><font class="color">&laquo;&nbsp;</font><font class="thin">La lutte pour sauver les tigres est notre responsabilité à tous. Les étres humains sont la réponse pour sauvegarder les tigres. Toi et moi, nous sommes tous la réponse.</font><font class="color">&nbsp;&raquo;</font></font><br><font class="color small thin">&mdash;&nbsp;Singye Wangmo, <font class="en">Senior Forestry Officer at Royal Manas National Park in Bhutan</font><font class="fr">Agent forestier principal au parc national Royal Manas au Bhoutan</font>, 2017</font></h4>
 
       </div>
     </section>
@@ -273,7 +273,7 @@
       <p class="small">In Memoriam</p>
 
       <p class="linebreak small"><font class="title">Bloody Mary &middot;&nbsp;White Sky &middot;&nbsp;White Moon</font></p>
-      <p class="small"><font class="small">Sooyong Park <i>Endangered Emperors of Siberia: The Fall of Three Generations</i> (film, 2003)</font></p>
+      <p class="small"><font class="small">Sooyong Park <i>Endangered Emperors of Siberia: The Fall of Three Generations</i> (<font class="fr">&nbsp;</font>film, 2003<font class="fr">&nbsp;</font>)</font></p>
 
       <!-- <p class="linebreak small"><font class="title">Golu</font></p>
       <p class="small"><font class="small">Disney Nature <i>Tiger</i> (film, 2024)</font></p> -->
