--- a/scene/two/the-beginning-of-chapter-two/index.html
+++ b/scene/two/the-beginning-of-chapter-two/index.html
@@ -81,10 +81,10 @@
       <div class="clear">
 
         <div class="quote" id="footnotes">
-          <p class="small"><sup>1</sup> ParaType. About us. <a href="../../../url/-com/paratype/" title="ParaType" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>2</sup> ParaType. Fonts. ITC Stenberg. (1997) <a href="../../../url/-com/paratype-itc-stenberg/" title="ParaType / Fonts / ITC Stenberg" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>3</sup> ParaType. Fonts. Rodchenko. (1996-2002) <a href="../../../url/-com/paratype-rodchenko/" title="ParaType / Fonts / Rodchenko" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>4</sup> Luc Devroye, School of Computer Science, McGill University, Montreal, Canada. Type design information page. Tagir Safayev. <a href="../../../url/www/luc-devroye-fonts-rodchenko/" title="Devroye / Fonts / Rodchenko" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>1</sup>&nbsp; ParaType. About us. <a href="../../../url/-com/paratype/" title="ParaType" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>2</sup>&nbsp; ParaType. Fonts. ITC Stenberg. (1997) <a href="../../../url/-com/paratype-itc-stenberg/" title="ParaType / Fonts / ITC Stenberg" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>3</sup>&nbsp; ParaType. Fonts. Rodchenko. (1996-2002) <a href="../../../url/-com/paratype-rodchenko/" title="ParaType / Fonts / Rodchenko" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>4</sup>&nbsp; Luc Devroye, School of Computer Science, McGill University, Montreal, Canada. Type design information page. Tagir Safayev. <a href="../../../url/www/luc-devroye-fonts-rodchenko/" title="Devroye / Fonts / Rodchenko" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
         </div>
       </div>
