--- a/conservation/index.html
+++ b/conservation/index.html
@@ -33,7 +33,7 @@
     <ul class="page">
       <li class="crumb logo"><a href="../" title="Animat Habitat"><img alt="Animat Mark &ndash; Light &copy; Animat Habitat, 2015" class="logo" src="../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb active"><a><i>Conservation</i></a></li>
-      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat / Conservation"><font class="en">fr</font><font class="fr">en</font></a></li>
+      <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat conservation."><font class="en">fr</font><font class="fr">en</font></a></li>
     </ul>
   </nav>
 
