--- a/scene/one/elephant-conservation-botswana/index.html
+++ b/scene/one/elephant-conservation-botswana/index.html
@@ -93,8 +93,8 @@
       <div class="clear">
 
         <div class="quote" id="footnotes">
-          <p class="small"><sup>1</sup> Adams, T.A., Chase, M.J., Attard, A., Leggett, K. &lsquo;A preliminary study of stakeholders' opinions and perceptions of elephants and elephant management in Botswana.&rsquo; Pachyderm, No.58 2017. <a href="../../../url/-org/pachydermjournal-419/" title="A preliminary study of stakeholders’ opinions and perceptions of elephants and elephant management in Botswana." target="_blank" rel="noopener">Download&nbsp;PDF</a></p>
-          <p class="small"><sup>2</sup> Bell, C., Pinnock, D. <i>The Last Elephants</i>, &lsquo;Making a safe haven&rsquo;, p&nbsp;211-221. (2019) Smithsonian Books.</p>
+          <p class="small"><sup>1</sup>&nbsp; Adams, T.A., Chase, M.J., Attard, A., Leggett, K. &lsquo;A preliminary study of stakeholders' opinions and perceptions of elephants and elephant management in Botswana.&rsquo; Pachyderm, No.58 2017. <a href="../../../url/-org/pachydermjournal-419/" title="A preliminary study of stakeholders’ opinions and perceptions of elephants and elephant management in Botswana." target="_blank" rel="noopener">PDF&nbsp;Document</a></p>
+          <p class="small"><sup>2</sup>&nbsp; Bell, C., Pinnock, D. <i>The Last Elephants</i>, &lsquo;Making a safe haven&rsquo;, p&nbsp;211-221. (2019) Smithsonian Books.</p>
 
         </div>
       </div>
@@ -126,8 +126,8 @@
       <div class="clear">
 
         <div class="quote" id="footnotes">
-          <p class="small"><sup>3</sup> Cushman, S.A., Chase, M.J., and Griffin, C. &lsquo;Elephants in space and time.&rsquo; Oikos, 109:331-341. 2005. <a href="../../../url/-org/elephantswithoutborders-elephants-in-space-and-time-pdf" title="Elephants in space and time." target="_blank" rel="noopener">Download&nbsp;PDF</a></p>
-          <!-- <p class="small"><sup>6</sup> Sitati and Walpole 2006; Hoare 2012; Songhurst and Coulson 2014</p> -->
+          <p class="small"><sup>3</sup>&nbsp; Cushman, S.A., Chase, M.J., and Griffin, C. &lsquo;Elephants in space and time.&rsquo; Oikos, 109:331-341. 2005. <a href="../../../url/-org/elephantswithoutborders-elephants-in-space-and-time-pdf" title="Elephants in space and time." target="_blank" rel="noopener">PDF&nbsp;Document</a></p>
+          <!-- <p class="small"><sup>6</sup>&nbsp; Sitati and Walpole 2006; Hoare 2012; Songhurst and Coulson 2014</p> -->
 
         </div>
       </div>
