--- a/scene/one/elephant-conservation-nairobi/index.html
+++ b/scene/one/elephant-conservation-nairobi/index.html
@@ -68,9 +68,9 @@
       </div>
 
       <div class="quote" id="footnotes">
-        <p class="small"><sup>1</sup> Sheldrick Wildlife Trust. &lsquo;The Family Behind the Sheldrick Trust.&rsquo; 2019. <a href="../../../url/-org/sheldrickwildlifetrust-mission-history/" target="_blank" title="Sheldrick Wildlife Trust / History">Website&nbsp;Link</a></p>
-        <p class="small"><sup>2</sup> Sheldrick Wildlife Trust. &lsquo;Early Days.&rsquo; 2019. <a href="../../../url/-org/sheldrickwildlifetrust-orphans-early-days/" target="_blank" title="Sheldrick Wildlife Trust / Early Days">Website&nbsp;Link</a></p>
-        <p class="small"><sup>3</sup> Sheldrick, DBE D. <i>An African Love Story &ndash; Love, Life and Elephants.</i> 2012. <a href="../../../url/-org/sheldrickwildlifetrust-an-african-love-story-love-life-and-elephants/" target="_blank" title="Sheldrick Wildlife Trust / An African Love Story">Website&nbsp;Link</a></p>
+        <p class="small"><sup>1</sup>&nbsp; Sheldrick Wildlife Trust. &lsquo;The Family Behind the Sheldrick Trust.&rsquo; 2019. <a href="../../../url/-org/sheldrickwildlifetrust-mission-history/" target="_blank" title="Sheldrick Wildlife Trust / History">Website&nbsp;Link</a></p>
+        <p class="small"><sup>2</sup>&nbsp; Sheldrick Wildlife Trust. &lsquo;Early Days.&rsquo; 2019. <a href="../../../url/-org/sheldrickwildlifetrust-orphans-early-days/" target="_blank" title="Sheldrick Wildlife Trust / Early Days">Website&nbsp;Link</a></p>
+        <p class="small"><sup>3</sup>&nbsp; Sheldrick, DBE D. <i>An African Love Story &ndash; Love, Life and Elephants.</i> 2012. <a href="../../../url/-org/sheldrickwildlifetrust-an-african-love-story-love-life-and-elephants/" target="_blank" title="Sheldrick Wildlife Trust / An African Love Story">Website&nbsp;Link</a></p>
 
       </div>
 
@@ -334,7 +334,7 @@
       </div>
 
       <div class="quote" id="footnotes-2">
-        <p class="small"><sup>4</sup> Sheldrick Wildlife Trust. Kiasa. 2017. <a href="../../../url/-org/sheldrickwildlifetrust-orphans-kiasa/" target="_blank" title="Sheldrick Wildlife Trust / Kiasa">Website&nbsp;Link</a></p>
+        <p class="small"><sup>4</sup>&nbsp; Sheldrick Wildlife Trust. Kiasa. 2017. <a href="../../../url/-org/sheldrickwildlifetrust-orphans-kiasa/" target="_blank" title="Sheldrick Wildlife Trust / Kiasa">Website&nbsp;Link</a></p>
 
         <!-- https://www.telegraph.co.uk/culture/books/bookreviews/9161071/An-African-Love-Story-by-Daphne-Sheldrick-review.html -->
 
