--- a/scene/two/history-of-forests-trees/index.html
+++ b/scene/two/history-of-forests-trees/index.html
@@ -103,8 +103,8 @@
       <div class="clear">
 
         <div class="quote" id="footnotes">
-          <p class="small"><sup>1</sup> Lightfoot, Norman R. <i>Images of the Wild</i> (1978) National Film Board of Canada.</p>
-          <p class="small"><sup>2</sup> Archibold, Rick. <i>Robert Bateman: An Artist in Nature</i> (1990) Madison Press Books.</p>
+          <p class="small"><sup>1</sup>&nbsp; Lightfoot, Norman R. <i>Images of the Wild</i> (1978) National Film Board of Canada.</p>
+          <p class="small"><sup>2</sup>&nbsp; Archibold, Rick. <i>Robert Bateman: An Artist in Nature</i> (1990) Madison Press Books.</p>
 
         </div>
       </div>
@@ -201,8 +201,8 @@
       <div class="clear">
 
         <div class="quote" id="footnotes-2">
-          <p class="small"><sup>3</sup> D'Augustine, Corey. <i>In the Studio</i> &lsquo;The Painting Technique of Franz Kline: Chief&rsquo; (2010) The Museum of Modern Art. <a href="../../../url/youtube/1xQTlp0hscs/" title="YouTube / The Museum of Modern Art / In the Studio / The Painting Technique of Franz Kline: Chief" target="_blank" rel="noopener">Video&nbsp;Link</a></p>
-          <p class="small"><sup>4</sup> Bateman, Robert. &lsquo;Bateman on Painting&rsquo; <a href="../../../url/-ca/robertbateman-on-painting/" title="Robert Bateman / Painting" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>3</sup>&nbsp; D'Augustine, Corey. <i>In the Studio</i> &lsquo;The Painting Technique of Franz Kline: Chief&rsquo; (2010) The Museum of Modern Art. <a href="../../../url/youtube/1xQTlp0hscs/" title="YouTube / The Museum of Modern Art / In the Studio / The Painting Technique of Franz Kline: Chief" target="_blank" rel="noopener">Video&nbsp;Link</a></p>
+          <p class="small"><sup>4</sup>&nbsp; Bateman, Robert. &lsquo;Bateman on Painting&rsquo; <a href="../../../url/-ca/robertbateman-on-painting/" title="Robert Bateman / Painting" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
           <!-- YouTube Series of Bateman talks ?? -->
 
@@ -275,8 +275,8 @@
       <div class="clear">
 
         <div class="quote" id="footnotes-3">
-          <p class="small"><sup>5</sup> O'Donovan, Kieran. <i>Our Planet</i> (2019) Silverback Films, Netfilx <a href="../../../url/-com/ourplanet/" title="Our Planet (2019)" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>6</sup> Galloway, Gloria. &lsquo;Canada's boreal forest needs global protection&hellip;&rsquo; (2011) The Globe And Mail. <a href="../../../url/theglobeandmail/canadas-boreal-forest/" title="The Globe And Mail / Politics / Canada's boreal forest needs global protection (2011)" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>5</sup>&nbsp; O'Donovan, Kieran. <i>Our Planet</i> (2019) Silverback Films, Netfilx <a href="../../../url/-com/ourplanet/" title="Our Planet (2019)" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>6</sup>&nbsp; Galloway, Gloria. &lsquo;Canada's boreal forest needs global protection&hellip;&rsquo; (2011) The Globe And Mail. <a href="../../../url/theglobeandmail/canadas-boreal-forest/" title="The Globe And Mail / Politics / Canada's boreal forest needs global protection (2011)" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
         </div>
       </div>
